--- a/DotNet/Scraper/Scraper/Views/Home/Index.cshtml
+++ b/DotNet/Scraper/Scraper/Views/Home/Index.cshtml
@@ -1,19 +1,33 @@
-﻿<section id="control-panel">
-    <button onclick="Request()" class="btn btn-primary">Go!</button>
-    <input type="text" id="requestUrl" size="100" list="history">
-    <datalist id="history">
-        <option value="jenni">
-        <option value="keira">
-        <option value="emma">
-        <option value="tillie">
-    </datalist>
-    <button onclick="Clear()" class="btn btn-danger">Clear</button>
+﻿<section id="control-panel">    
+        <div class="col-6">
+            <input type="text" id="requestUrl" size="100" list="babes">
 
-    <button onclick="FilterClick()" class="btn btn-primary">Filter</button>
-    <input type="text" id="filter-predicate-value" size="30" list="history">
-    <button onclick="ResetFilterClick()" class="btn btn-danger">Reset</button>
-    <button onclick="Global.sidePager.CloseAll()" class="btn btn-primary">Close side pages</button>
+            <button onclick="Request()" class="btn btn-primary mb-2">Go</button>
+            <button onclick="RequestP10()" class="btn btn-primary mb-2">Go+10</button>
+
+            <label for="page">Page</label>
+            <input type="number" name="page" min="1" max="999" id="page">
+
+            <datalist id="babes">
+                <option value="jenni">
+                <option value="keira">
+                <option value="emma">
+                <option value="tillie">
+            </datalist>
+
+            <button onclick="Clear()" class="btn btn-danger">Clear</button>
+        </div>
+
+        <div class="col-6">
+            <input type="text" id="filter-predicate-value" size="30" list="babes">
+            <button onclick="FilterClick()" class="btn btn-primary">Filter</button>
+            <button onclick="ResetFilterClick()" class="btn btn-danger">Reset</button>
+            &nbsp;
+            <button onclick="AppControls.sidePager.CloseAll()" class="btn btn-primary">Close side pages</button>
+        </div>
 </section>
 
-<div id="content">
+<div class="row">
+    <div id="content">
+    </div>
 </div>
