--- a/DotNet/Scraper/Scraper/Views/Shared/_Layout.cshtml
+++ b/DotNet/Scraper/Scraper/Views/Shared/_Layout.cshtml
@@ -4,19 +4,20 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+
+    @*<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>*@
+
+    @Html.Partial("_jquery")
+    @Html.Partial("_bootstrap")
+    @Html.Partial("_nadam")
+
 </head>
 <body>
-    <div class="container-fluid body-content">
+    <div class="container-fluid">
         @RenderBody()
-        <hr />
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @Scripts.Render("~/bundles/nadam")
-    @Scripts.Render("~/bundles/app")
-    @RenderSection("scripts", required: false)
+    @Scripts.Render("~/scripts/app")
+    @Styles.Render("~/styles/app")
 </body>
 </html>
