saving changes again

--- a/web/Scraper/Scraper/Views/V2/Index.cshtml
+++ b/web/Scraper/Scraper/Views/V2/Index.cshtml
@@ -6,6 +6,7 @@
 
     <script src="../web-app-v1/jquery/jquery-v3.4.0.js"></script>
     <script src="../web-app-v1/jquery/jquery-ui.min.js"></script>
+    <script src="~/lib/masonry.pkgd.min.js"></script>
 
     <script src="../web-app-v1/bootstrap/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="../web-app-v1/bootstrap/bootstrap.min.css">
