--- a/web/Scraper/Views/V2/Index.cshtml
+++ b/web/Scraper/Views/V2/Index.cshtml
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
+    <title>Scraper V2</title>
 
     <script src="../web-app-v1/jquery/jquery-v3.4.0.js"></script>
     <script src="../web-app-v1/jquery/jquery-ui.min.js"></script>
