--- a/web/Scraper/Views/V3/Index.cshtml
+++ b/web/Scraper/Views/V3/Index.cshtml
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
@@ -33,20 +33,13 @@
         <div id="control-panel-slot-2" class="col-6 d-flex align-items-center">
             <button onclick="AppControls.sidePager.CloseAll()" class="btn btn-primary ml-3 mr-1">Close side pages</button>
         </div>
-        @*<div class="col-6 d-flex align-items-center">
-            <input type="text" id="filter-predicate-value" size="30" list="babes" class="ml-1 mr-1">
-            <button onclick="FilterClick()" class="btn btn-primary ml-1 mr-1">Filter</button>
-            <button onclick="ResetFilterClick()" class="btn btn-danger ml-1 mr-1">Reset</button>
-            &nbsp;
-            <button onclick="AppControls.sidePager.CloseAll()" class="btn btn-primary ml-3 mr-1">Close side pages</button>
-        </div>*@
     </div>
 
-        <div class="row pt-5">
-            <div class="m-1" id="content">
-            </div>
+    <div class="row pt-5">
+        <div class="m-1" id="content">
         </div>
+    </div>
 
-        <script src="../web-app-v2/dist/index.bundle.js"></script>
+    <script src="../web-app-v3_dist/index.bundle.js"></script>
 </body>
 </html>
