--- a/web/Scraper/web-app-v3/src/nadam/nadam.side-pager.control.scss
+++ b/web/Scraper/web-app-v3/src/nadam/nadam.side-pager.control.scss
@@ -17,7 +17,7 @@
 
     #side-pages-manager .side-page .ui-resizable-w {
         width: 5px;
-        background: linear-gradient(to right, blue, lightskyblue);
+        background:red;/* linear-gradient(to right, blue, lightskyblue);*/
     }
 
 #side-pages-manager .side-page-closed {
