--- a/web/Scraper/Views/V3/Index.cshtml
+++ b/web/Scraper/Views/V3/Index.cshtml
@@ -32,5 +32,5 @@
 
 </div>
 
-<script src="../web-app-v3_dist/app.bundle.js"></script>
-<script src="../web-app-v3_dist/bootstrap.bundle.js"></script>
+<script src="../web-app-v3/dist/app.bundle.js"></script>
+<script src="../web-app-v3/dist/bootstrap.bundle.js"></script>
