--- a/web/Scraper/Views/V1/Index.cshtml
+++ b/web/Scraper/Views/V1/Index.cshtml
@@ -4,25 +4,13 @@
 
 <div id="control-panel" class="row position-fixed">
     <div class="col-6 d-flex align-items-center">
-        <input type="text" id="requestUrl" size="100" list="babes">
+        <input type="text" id="requestUrl" size="100">
 
         <button onclick="Request()" class="btn btn-primary ml-1 mr-1">Go</button>
         <button onclick="RequestP10()" class="btn btn-primary ml-1 mr-1">Go+10</button>
 
         <label for="page" class="ml-1 mr-1">Page</label>
         <input type="number" name="page" min="1" max="999" id="page" class="ml-1 mr-1">
-
-        <datalist id="babes">
-            <option value="jenni">
-            <option value="keira">
-            <option value="emma">
-            <option value="tillie">
-            <option value="jessica">
-            <option value="stacey">
-            <option value="victoria">
-            <option value="katya">
-            <option value="abbie">
-        </datalist>
 
         <button onclick="Clear()" class="btn btn-danger ml-1 mr-1">Clear</button>
     </div>
