--- a/UI/_converted-web-designs/single-page-sample-1/scss/cta.scss
+++ b/UI/_converted-web-designs/single-page-sample-1/scss/cta.scss
@@ -1,27 +1,29 @@
-/*--------------------------------------------------------------
-#0.9	cta
---------------------------------------------------------------*/
 .cta {
 	position: relative;
 	text-align: center;
-  }
-  
-  .cta:before {
-	content: "";
-	background-color: rgba(0, 0, 0, 0.55);
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	left: 0;
-	top: 0;
-  }
-  
-  .cta h2 {
-	font-family: "Great Vibes", cursive;
-	font-size: 75px;
-	font-size: 4.16667rem;
-	color: #fff;
-	margin: 0;
+	&:before {
+	  content: "";
+	  background-color: rgba(0, 0, 0, 0.55);
+	  width: 100%;
+	  height: 100%;
+	  position: absolute;
+	  left: 0;
+	  top: 0;
+	}
+	h2 {
+	  font-family: "Great Vibes", cursive;
+	  font-size: 75px;
+	  font-size: 4.16667rem;
+	  color: #fff;
+	  margin: 0;
+	  span {
+		font-family: "Dosis", sans-serif;
+		font-size: 30px;
+		font-size: 1.66667rem;
+		display: block;
+		margin-bottom: 0.6em;
+	  }
+	}
   }
   
   @media (max-width: 1199px) {
@@ -43,14 +45,6 @@
 	  font-size: 40px;
 	  font-size: 2.22222rem;
 	}
-  }
-  
-  .cta h2 span {
-	font-family: "Dosis", sans-serif;
-	font-size: 30px;
-	font-size: 1.66667rem;
-	display: block;
-	margin-bottom: 0.6em;
   }
   
   @media (max-width: 1199px) {
