--- a/UI/_converted-web-designs/single-page-sample-1/scss/events-section.scss
+++ b/UI/_converted-web-designs/single-page-sample-1/scss/events-section.scss
@@ -1,12 +1,53 @@
-/*--------------------------------------------------------------
-#1.0	events-section
---------------------------------------------------------------*/
 .events-section .event {
 	overflow: hidden;
-  }
-  
-  .events-section .event + .event {
-	margin-top: 45px;
+	+ .event {
+	  margin-top: 45px;
+	}
+	.img-holder {
+	  width: 40%;
+	  float: left;
+	}
+	.details {
+	  width: 60%;
+	  float: left;
+	  padding-left: 35px;
+	  h3 {
+		font-size: 20px;
+		font-size: 1.11111rem;
+		font-weight: 600;
+		color: #3e3e3e;
+		margin: 0 0 0.9em;
+		text-transform: uppercase;
+	  }
+	}
+	ul {
+	  margin-bottom: 15px;
+	  li {
+		font-size: 16px;
+		font-size: 0.88889rem;
+		color: #a9a9a9;
+		position: relative;
+		padding-left: 22px;
+		i {
+		  color: #5e9a8e;
+		  position: absolute;
+		  left: 0;
+		  top: 3px;
+		}
+	  }
+	  > li + li {
+		margin-top: 5px;
+	  }
+	}
+	.see-location-btn {
+	  font-weight: 600;
+	  color: #5e9a8e;
+	  display: inline-block;
+	  margin-top: 5px;
+	  &:hover {
+		color: #4b7a71;
+	  }
+	}
   }
   
   @media (max-width: 991px) {
@@ -17,22 +58,11 @@
 	}
   }
   
-  .events-section .event .img-holder {
-	width: 40%;
-	float: left;
-  }
-  
   @media (max-width: 991px) {
 	.events-section .event .img-holder {
 	  width: 100%;
 	  float: none;
 	}
-  }
-  
-  .events-section .event .details {
-	width: 60%;
-	float: left;
-	padding-left: 35px;
   }
   
   @media (max-width: 991px) {
@@ -44,32 +74,11 @@
 	}
   }
   
-  .events-section .event .details h3 {
-	font-size: 20px;
-	font-size: 1.11111rem;
-	font-weight: 600;
-	color: #3e3e3e;
-	margin: 0 0 0.9em;
-	text-transform: uppercase;
-  }
-  
   @media (max-width: 1199px) {
 	.events-section .event .details h3 {
 	  font-size: 18px;
 	  font-size: 1rem;
 	}
-  }
-  
-  .events-section .event ul {
-	margin-bottom: 15px;
-  }
-  
-  .events-section .event ul li {
-	font-size: 16px;
-	font-size: 0.88889rem;
-	color: #a9a9a9;
-	position: relative;
-	padding-left: 22px;
   }
   
   @media (max-width: 1199px) {
@@ -78,26 +87,3 @@
 	  font-size: 0.83333rem;
 	}
   }
-  
-  .events-section .event ul li i {
-	color: #5e9a8e;
-	position: absolute;
-	left: 0;
-	top: 3px;
-  }
-  
-  .events-section .event ul > li + li {
-	margin-top: 5px;
-  }
-  
-  .events-section .event .see-location-btn {
-	font-weight: 600;
-	color: #5e9a8e;
-	display: inline-block;
-	margin-top: 5px;
-  }
-  
-  .events-section .event .see-location-btn:hover {
-	color: #4b7a71;
-  }
-  
