--- a/UI/_converted-web-designs/single-page-sample-1/scss/gallery-section.scss
+++ b/UI/_converted-web-designs/single-page-sample-1/scss/gallery-section.scss
@@ -1,13 +1,90 @@
-/*--------------------------------------------------------------
-#1.2	gallery-section
---------------------------------------------------------------*/
 .gallery-section {
-	/*** filter ***/
-  }
-  
-  .gallery-section .gallery-filters {
-	text-align: left;
-	margin-bottom: 35px;
+	.gallery-filters {
+	  text-align: left;
+	  margin-bottom: 35px;
+	  ul {
+		overflow: hidden;
+		li {
+		  float: left;
+		  a {
+			font-weight: bold;
+			color: #3e3e3e;
+			display: block;
+			text-transform: uppercase;
+		  }
+		}
+		> li + li {
+		  margin-left: 15px;
+		}
+		.current {
+		  color: #5e9a8e;
+		}
+	  }
+	}
+	.masonry-gallery {
+	  margin: 0 -7.5px;
+	  .grid {
+		width: 33.33%;
+		float: left;
+		padding: 0 7.5px 15px;
+	  }
+	}
+	.grid {
+	  img {
+		-webkit-filter: grayscale(60%);
+		-moz-filter: grayscale(60%);
+		-o-filter: grayscale(60%);
+		-ms-filter: grayscale(60%);
+		filter: grayscale(60%);
+		-webkit-transition: all .3s ease;
+		-moz-transition: all .3s ease;
+		-o-transition: all .3s ease;
+		transition: all .3s ease;
+	  }
+	  &:hover img {
+		-webkit-filter: grayscale(0);
+		-moz-filter: grayscale(0);
+		-o-filter: grayscale(0);
+		-ms-filter: grayscale(0);
+		filter: grayscale(0);
+	  }
+	}
+	.video-play-btn {
+	  position: relative;
+	  display: block;
+	  i {
+		width: 50px;
+		height: 50px;
+		line-height: 47px;
+		font-size: 20px;
+		font-size: 1.11111rem;
+		background: rgba(94, 154, 142, 0.9);
+		border: 3px solid #5c978b;
+		color: #fff;
+		text-align: center;
+		position: absolute;
+		left: 50%;
+		top: 50%;
+		-webkit-transform: translate(-50%, -50%);
+		-moz-transform: translate(-50%, -50%);
+		-o-transform: translate(-50%, -50%);
+		-ms-transform: translate(-50%, -50%);
+		transform: translate(-50%, -50%);
+		-webkit-border-radius: 50%;
+		-moz-border-radius: 50%;
+		-o-border-radius: 50%;
+		-ms-border-radius: 50%;
+		border-radius: 50%;
+		-webkit-transition: all 0.3s;
+		-moz-transition: all 0.3s;
+		-o-transition: all 0.3s;
+		-ms-transition: all 0.3s;
+		transition: all 0.3s;
+	  }
+	  &:hover i {
+		background: #5e9a8e;
+	  }
+	}
   }
   
   @media (max-width: 767px) {
@@ -16,38 +93,11 @@
 	}
   }
   
-  .gallery-section .gallery-filters ul {
-	overflow: hidden;
-  }
-  
-  .gallery-section .gallery-filters ul li {
-	float: left;
-  }
-  
-  .gallery-section .gallery-filters ul > li + li {
-	margin-left: 15px;
-  }
-  
-  .gallery-section .gallery-filters ul li a {
-	font-weight: bold;
-	color: #3e3e3e;
-	display: block;
-	text-transform: uppercase;
-  }
-  
   @media (max-width: 767px) {
 	.gallery-section .gallery-filters ul li a {
 	  font-size: 15px;
 	  font-size: 0.83333rem;
 	}
-  }
-  
-  .gallery-section .gallery-filters ul .current {
-	color: #5e9a8e;
-  }
-  
-  .gallery-section .masonry-gallery {
-	margin: 0 -7.5px;
   }
   
   @media (max-width: 991px) {
@@ -60,12 +110,6 @@
 	.gallery-section .masonry-gallery {
 	  margin: 0;
 	}
-  }
-  
-  .gallery-section .masonry-gallery .grid {
-	width: 33.33%;
-	float: left;
-	padding: 0 7.5px 15px;
   }
   
   @media (max-width: 991px) {
@@ -88,18 +132,6 @@
 	}
   }
   
-  .gallery-section .grid img {
-	-webkit-filter: grayscale(60%);
-	-moz-filter: grayscale(60%);
-	-o-filter: grayscale(60%);
-	-ms-filter: grayscale(60%);
-	filter: grayscale(60%);
-	-webkit-transition: all .3s ease;
-	-moz-transition: all .3s ease;
-	-o-transition: all .3s ease;
-	transition: all .3s ease;
-  }
-  
   @media (max-width: 767px) {
 	.gallery-section .grid img {
 	  -webkit-filter: grayscale(0);
@@ -108,51 +140,4 @@
 	  -ms-filter: grayscale(0);
 	  filter: grayscale(0);
 	}
-  }
-  
-  .gallery-section .grid:hover img {
-	-webkit-filter: grayscale(0);
-	-moz-filter: grayscale(0);
-	-o-filter: grayscale(0);
-	-ms-filter: grayscale(0);
-	filter: grayscale(0);
-  }
-  
-  .gallery-section .video-play-btn {
-	position: relative;
-	display: block;
-  }
-  
-  .gallery-section .video-play-btn i {
-	width: 50px;
-	height: 50px;
-	line-height: 47px;
-	font-size: 20px;
-	font-size: 1.11111rem;
-	background: rgba(94, 154, 142, 0.9);
-	border: 3px solid #5c978b;
-	color: #fff;
-	text-align: center;
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	-webkit-transform: translate(-50%, -50%);
-	-moz-transform: translate(-50%, -50%);
-	-o-transform: translate(-50%, -50%);
-	-ms-transform: translate(-50%, -50%);
-	transform: translate(-50%, -50%);
-	-webkit-border-radius: 50%;
-	-moz-border-radius: 50%;
-	-o-border-radius: 50%;
-	-ms-border-radius: 50%;
-	border-radius: 50%;
-	-webkit-transition: all 0.3s;
-	-moz-transition: all 0.3s;
-	-o-transition: all 0.3s;
-	-ms-transition: all 0.3s;
-	transition: all 0.3s;
-  }
-  
-  .gallery-section .video-play-btn:hover i {
-	background: #5e9a8e;
   }
