--- a/UI/_converted-web-designs/single-page-sample-1/scss/hero-slider.scss
+++ b/UI/_converted-web-designs/single-page-sample-1/scss/hero-slider.scss
@@ -1,15 +1,11 @@
-/*** header style 2 ****/
-/*--------------------------------------------------------------
-#0.4	hero slider
---------------------------------------------------------------*/
+@import "./colors.scss";
 
 .hero {
 	position: relative;
 	height: calc(100vh - 90px);
 	min-height: 700px;
 	overflow: hidden;
-	/** slider controls **/
-	/*** arrow hover ***/
+	
 	.slide-item {
 	  height: 100vh;
 	  min-height: 700px;
@@ -41,7 +37,7 @@
 	  }
 	}
 	.slick-prev, .slick-next {
-	  background-color: rgba(94, 154, 142, 0.6);
+	  background-color: change-color($pastel-green, $alpha: 0.6);
 	  width: 50px;
 	  height: 50px;
 	  z-index: 111;
@@ -50,8 +46,8 @@
 	  -o-border-radius: 50%;
 	  -ms-border-radius: 50%;
 	  border-radius: 50%;
-	  -webkit-box-shadow: 0 0 0 5px rgba(94, 154, 142, 0.9);
-	  box-shadow: 0 0 0 5px rgba(94, 154, 142, 0.9);
+	  -webkit-box-shadow: 0 0 0 5px change-color($pastel-green, $alpha: 0.9);
+	  box-shadow: 0 0 0 5px change-color($pastel-green, $alpha: 0.9);
 	  opacity: 0;
 	  -webkit-transition: all 0.3s;
 	  -moz-transition: all 0.3s;
@@ -60,9 +56,9 @@
 	  transition: all 0.3s;
 	}
 	.slick-prev:hover, .slick-next:hover {
-	  background-color: rgba(94, 154, 142, 0.8);
-	  -webkit-box-shadow: 0 0 0 5px #5e9a8e;
-	  box-shadow: 0 0 0 5px #5e9a8e;
+	  background-color: change-color($pastel-green, $alpha: 0.8);
+	  -webkit-box-shadow: 0 0 0 5px $pastel-green;
+	  box-shadow: 0 0 0 5px $pastel-green;
 	}
 	.slick-prev:before, .slick-next:before {
 	  font-size: 25px;
@@ -188,7 +184,7 @@
 		  animation: save-the-date-pulse 1s infinite;
 		}
 		&:after {
-		  background-color: rgba(94, 154, 142, 0.7);
+		  background-color: change-color($pastel-green, $alpha: 0.6);
 		  width: 100%;
 		  height: 100%;
 		  left: 0;
@@ -246,8 +242,8 @@
 	  .slick-prev, .slick-next {
 		width: 45px;
 		height: 45px;
-		-webkit-box-shadow: 0 0 0 3px rgba(94, 154, 142, 0.9);
-		box-shadow: 0 0 0 3px rgba(94, 154, 142, 0.9);
+		-webkit-box-shadow: 0 0 0 3px change-color($pastel-green, $alpha: 0.9);
+		box-shadow: 0 0 0 3px change-color($pastel-green, $alpha: 0.9);
 	  }
 	}
   }
@@ -257,8 +253,8 @@
 	  .slick-prev, .slick-next {
 		width: 35px;
 		height: 35px;
-		-webkit-box-shadow: 0 0 0 3px rgba(94, 154, 142, 0.9);
-		box-shadow: 0 0 0 3px rgba(94, 154, 142, 0.9);
+		-webkit-box-shadow: 0 0 0 3px change-color($pastel-green, $alpha: 0.9);
+		box-shadow: 0 0 0 3px change-color($pastel-green, $alpha: 0.9);
 	  }
 	}
   }
@@ -406,8 +402,7 @@
 	  -webkit-transform: scale3d(1, 1, 1);
 	  transform: scale3d(1, 1, 1);
 	}
-  }
-  
+  }  
   
   .static-hero {
 	background: url("img/slide-1.jpg") center (center / cover) no-repeat local;
