playing with angular material-changing my mind about it

--- a/Front-End/spa-libs/Angular/ng-cli-demo/src/app/app.component.html
+++ b/Front-End/spa-libs/Angular/ng-cli-demo/src/app/app.component.html
@@ -1,3 +1,4 @@
-<notes-login></notes-login>
-<app-note></app-note>
+<grn-account></grn-account>
 <router-outlet></router-outlet>
+
+<app-test-ng-schemantics></app-test-ng-schemantics>
