adding css-basics folder, and playing with layouts

--- a/UI/layouts/flexbox.html
+++ b/UI/layouts/flexbox.html
@@ -24,7 +24,7 @@
 			list-style: none;
 		}
 
-		.flex-item{
+		.flex-item {
 			margin: 3px;
 		}
 
@@ -37,89 +37,50 @@
 		} */
 
 		img {
-			width: 100%;
+			max-width: 280px;
+
 		}
 	</style>
 </head>
 <body>
 	<div class="container">
 		<div class="row">
-			<ul class="flex-container">
-				<li class="flex-item landscape">
-					<img src="../test-images/landscape_240x180.png">
-				</li>
-				<li class="flex-item landscape">
-					<img src="../test-images/landscape_240x180.png">
-				</li>
-				<li class="flex-item portrait">
-					<img src="../test-images/portrait_240x180.png">
-				</li>
-				<li class="flex-item portrait">
-					<img src="../test-images/portrait_240x180.png">
-				</li>
-				<li class="flex-item portrait">
-					<img src="../test-images/portrait_240x180.png">
-				</li>
-				<li class="flex-item landscape">
-					<img src="../test-images/landscape_240x180.png">
-				</li>
-				<li class="flex-item landscape">
-					<img src="../test-images/landscape_240x180.png">
-				</li>
-				<li class="flex-item landscape">
-					<img src="../test-images/landscape_240x180.png">
-				</li>
-				<li class="flex-item portrait">
-					<img src="../test-images/portrait_240x180.png">
-				</li>
-				<li class="flex-item portrait">
-					<img src="../test-images/portrait_240x180.png">
-				</li>
-				<li class="flex-item">
-					<img src="../test-images/portrait_240x180.png">
-				</li>
-				<li class="flex-item landscape">
-					<img src="../test-images/landscape_240x180.png">
-				</li>
-			</ul>
+			<div class="flex-item">
+				<img alt="" class="img img-responsive" data-idx="0" src="https://nadam.blob.core.windows.net/wedding/preparation/thumbnails/IMG_6515.JPG">
+			</div>
+		
+			<div class="flex-item">
+				<img alt="" class="img img-responsive" data-idx="1" src="https://nadam.blob.core.windows.net/wedding/preparation/thumbnails/IMG_6534.JPG">
+			</div>
+		
+			<div class="flex-item">
+				<img alt="" class="img img-responsive" data-idx="2" src="https://nadam.blob.core.windows.net/wedding/preparation/thumbnails/IMG_6536.JPG">
+			</div>
+		
+			<div class="flex-item">
+				<img alt="" class="img img-responsive" data-idx="3" src="https://nadam.blob.core.windows.net/wedding/preparation/thumbnails/IMG_6560.JPG">
+			</div>
+		
+			<div class="flex-item">
+				<img alt="" class="img img-responsive" data-idx="4" src="https://nadam.blob.core.windows.net/wedding/preparation/thumbnails/IMG_6563.JPG">
+			</div>
+		
+			<div class="flex-item">
+				<img alt="" class="img img-responsive" data-idx="5" src="https://nadam.blob.core.windows.net/wedding/preparation/thumbnails/IMG_6574.JPG">
+			</div>
+		
+			<div class="flex-item">
+				<img alt="" class="img img-responsive" data-idx="6" src="https://nadam.blob.core.windows.net/wedding/preparation/thumbnails/IMG_6580.JPG">
+			</div>
+		
+			<div class="flex-item">
+				<img alt="" class="img img-responsive" data-idx="7" src="https://nadam.blob.core.windows.net/wedding/preparation/thumbnails/IMG_6583.JPG">
+			</div>
 		</div>
 	</div>
-	<hr><hr><hr>
-	<div class="container">
-		<div class="row">
-			<ul class="flex-container">
-				<li class="flex-item">
-					<img src="../test-images/landscape_240x180.png">
-				</li>
-				<li class="flex-item">
-					<img src="../test-images/landscape_240x180.png">
-				</li>
-				<li class="flex-item">
-					<img src="../test-images/landscape_240x180.png">
-				</li>
-				<li class="flex-item">
-					<img src="../test-images/landscape_240x180.png">
-				</li>
-				<li class="flex-item">
-					<img src="../test-images/landscape_240x180.png">
-				</li>
-				<li class="flex-item">
-					<img src="../test-images/landscape_240x180.png">
-				</li>
-				<li class="flex-item">
-					<img src="../test-images/landscape_240x180.png">
-				</li>
-				<li class="flex-item">
-					<img src="../test-images/landscape_240x180.png">
-				</li>
-				<li class="flex-item">
-					<img src="../test-images/landscape_240x180.png">
-				</li>
-				<li class="flex-item">
-					<img src="../test-images/landscape_240x180.png">
-				</li>
-			</ul>
-		</div>
-	</div>
+
+	<script>
+		
+	</script>
 </body>
 </html>
