--- a/UI/layouts/grid.html
+++ b/UI/layouts/grid.html
@@ -1,47 +1,60 @@
 <html>
 <head>
 	<style>
-		.container {
+		.gallery-grid {
 			background-color: lightgrey;			
 			padding:5px;
-			
+			width: 1200px;
+			margin: 0 auto;
 			display: grid;
-			grid-template-columns: 50% 50%;
+			grid-template-columns: 33% 33% 33%;
+		}
+
+		.grid-item {
+			min-height: 120px;
+			justify-self: center;
+			align-self: center;
+		}
+
+		.grid-item img {
+			max-width: 280px;
 		}
 		
-		.box1 {
-			margin: 6px;
-			height: 200px;
-			background-color: green;
-		}
-		
-		.box2 {
-			margin: 6px;
-			height: 300px;
-			background-color: red;
-		}
-		
-		.box3 {
-			margin: 6px;
-			height: 400px;			
-			background-color: blue;
-		}
 	</style>
 </head>
 <body>
-	<div class="container">
-		<div class="box1"></div>
-		<div class="box2"></div>
-		<div class="box3"></div>
-		<div class="box3"></div>
-		<div class="box2"></div>
-		<div class="box1"></div>
-		<div class="box3"></div>
-		<div class="box1"></div>
-		<div class="box1"></div>
-		<div class="box2"></div>
-		<div class="box2"></div>
-		<div class="box3"></div>
+	<div class="gallery-grid py-5">	
+		<div class="grid-item">
+			<img alt="" class="img img-responsive" data-idx="0" src="https://nadam.blob.core.windows.net/wedding/preparation/thumbnails/IMG_6515.JPG">
+		</div>
+	
+		<div class="grid-item">
+			<img alt="" class="img img-responsive" data-idx="1" src="https://nadam.blob.core.windows.net/wedding/preparation/thumbnails/IMG_6534.JPG">
+		</div>
+	
+		<div class="grid-item">
+			<img alt="" class="img img-responsive" data-idx="2" src="https://nadam.blob.core.windows.net/wedding/preparation/thumbnails/IMG_6536.JPG">
+		</div>
+	
+		<div class="grid-item">
+			<img alt="" class="img img-responsive" data-idx="3" src="https://nadam.blob.core.windows.net/wedding/preparation/thumbnails/IMG_6560.JPG">
+		</div>
+	
+		<div class="grid-item">
+			<img alt="" class="img img-responsive" data-idx="4" src="https://nadam.blob.core.windows.net/wedding/preparation/thumbnails/IMG_6563.JPG">
+		</div>
+	
+		<div class="grid-item">
+			<img alt="" class="img img-responsive" data-idx="5" src="https://nadam.blob.core.windows.net/wedding/preparation/thumbnails/IMG_6574.JPG">
+		</div>
+	
+		<div class="grid-item">
+			<img alt="" class="img img-responsive" data-idx="6" src="https://nadam.blob.core.windows.net/wedding/preparation/thumbnails/IMG_6580.JPG">
+		</div>
+	
+		<div class="grid-item">
+			<img alt="" class="img img-responsive" data-idx="7" src="https://nadam.blob.core.windows.net/wedding/preparation/thumbnails/IMG_6583.JPG">
+		</div>
 	</div>
 </body>
 </html>
